fix page-header spacing and sizing, remove provisional styling, resize study and flash cards to have a min-height on desktop displays

--- a/src/styles/cards.css
+++ b/src/styles/cards.css
@@ -6,7 +6,7 @@
 .reg-card,
 .flash-card {
 	border-radius: var(--border-radius);
-	height: 25vh;
+	min-height: 27vh;
 	width: 12.5vw;
 	text-align: center;
 }
